--- a/app/src/main/res/layout/dialog_grid_color_shade_item.xml
+++ b/app/src/main/res/layout/dialog_grid_color_shade_item.xml
@@ -8,39 +8,41 @@
     <android.support.v7.widget.CardView
         android:id="@+id/dialogCardView"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="80dp"
         card_view:cardCornerRadius="0dp"
         card_view:cardElevation="8dp"
         card_view:cardMaxElevation="8dp"
         card_view:contentPadding="4dp">
 
-
         <RelativeLayout
-            android:id="@+id/relativeLayout"
-            android:layout_width="match_parent"
+            android:id="@+id/dialogColorRelativeLayout"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:elevation="8dp"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:padding="5dp"
-                android:tint="@android:color/white" />
-
-
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/dialogColorText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/imageView"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="8dp"
-                android:textColor="@android:color/white"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_toEndOf="@+id/dialogColorImage"
+                android:text="SOME LONG DESC"
+                android:textColor="@color/grey_11"
+                android:textSize="10sp"
                 android:visibility="visible" />
 
+            <ImageView
+                android:id="@+id/dialogColorImage"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/circle_shape_outline"
+                android:padding="5dp" />
 
         </RelativeLayout>
 
