--- a/app/src/main/res/layout/shades_layout_stack_view.xml
+++ b/app/src/main/res/layout/shades_layout_stack_view.xml
@@ -1,27 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <StackView
-        android:id="@+id/shadesStackView"
-        android:layout_width="0dp"
-        android:layout_height="220dp"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/dialogRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:padding="4dp"
+        android:scrollbars="vertical"
+        android:visibility="gone"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toTopOf="@+id/shadesStackView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/imageButtonMain"
+                android:layout_width="@dimen/width20dp"
+                android:layout_height="@dimen/height20dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:background="@drawable/circle_shape_filled" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/imageButtonMain"
+                android:gravity="center"
+                android:text="color value"
+                android:textColor="@color/blue5"
+                android:visibility="visible" />
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/imageButton1"
+                android:layout_width="@dimen/width20dp"
+                android:layout_height="@dimen/width20dp"
+                android:layout_alignTop="@+id/imageButtonMain"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="4dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginStart="8dp"
+                android:layout_toEndOf="@+id/textView"
+                android:background="@drawable/circle_shape_filled" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/imageButton1"
+                android:gravity="center"
+                android:text="color value"
+                android:textColor="@color/blue5"
+                android:visibility="visible" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/imageButton2"
+                android:layout_width="@dimen/width20dp"
+                android:layout_height="@dimen/width20dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:background="@drawable/circle_shape_filled" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/imageButton2"
+                android:gravity="center"
+
+                android:text="color value"
+                android:textColor="@color/blue5"
+                android:visibility="visible" />
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/imageButton3"
+                android:layout_width="@dimen/width20dp"
+                android:layout_height="@dimen/width20dp"
+                android:layout_alignTop="@+id/imageButton2"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="4dp"
+                android:layout_toEndOf="@+id/textView2"
+                android:background="@drawable/circle_shape_filled" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignTop="@+id/textView2"
+
+                android:layout_toEndOf="@+id/imageButton3"
+                android:gravity="center"
+                android:text="color value"
+                android:textColor="@color/blue5"
+                android:visibility="visible" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/imageButton4"
+                android:layout_width="@dimen/width20dp"
+                android:layout_height="@dimen/width20dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignTop="@+id/textView4"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:background="@drawable/circle_shape_filled" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+
+                android:layout_alignBottom="@+id/imageButton5"
+                android:layout_toEndOf="@+id/imageButton4"
+                android:gravity="center"
+                android:text="color value"
+                android:textColor="@color/blue5"
+                android:visibility="visible" />
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/imageButton5"
+                android:layout_width="@dimen/width20dp"
+                android:layout_height="@dimen/width20dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginStart="8dp"
+                android:layout_toRightOf="@+id/textView4"
+                android:background="@drawable/circle_shape_filled" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignBottom="@+id/imageButton5"
+                android:layout_alignTop="@+id/imageButton5"
+                android:layout_toEndOf="@+id/imageButton5"
+                android:gravity="center"
+                android:text="color value"
+                android:textColor="@color/blue5"
+                android:visibility="visible" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/shadesHeader"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center|center_horizontal"
+        android:text="COLOR SHADES"
+        android:textColor="@color/blue5"
+        android:textStyle="bold"
+        android:visibility="visible" />
+
+    <StackView
+        android:id="@+id/shadesStackView"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:animateLayoutChanges="true"
         android:clipChildren="false"
         android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintVertical_bias="0.683" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
