--- a/app/src/main/res/layout-land/shades_layout_row.xml
+++ b/app/src/main/res/layout-land/shades_layout_row.xml
@@ -18,11 +18,9 @@
         android:background="@drawable/rectangle_shape_outline"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
@@ -47,12 +45,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="#11f2f2f2"
-            android:padding="8dp"
+            android:gravity="center"
+            android:padding="4dp"
             android:text="Color Value"
             android:textColor="@color/grey_11"
             android:textStyle="bold"
-            android:visibility="visible"
-            app:layout_constraintVertical_bias="0.324" />
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/stackShadeValueTextView"
@@ -69,7 +67,7 @@
             android:padding="4dp"
             android:text="Color Value"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="11sp"
             android:textStyle="bold"
             android:visibility="visible" />
 
