--- a/app/src/main/res/layout-land/shades_layout_stack_view.xml
+++ b/app/src/main/res/layout-land/shades_layout_stack_view.xml
@@ -29,13 +29,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:orientation="vertical"
         android:padding="8dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <com.mikhaellopez.circularimageview.CircularImageView
@@ -88,7 +89,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <com.mikhaellopez.circularimageview.CircularImageView
@@ -140,7 +141,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <com.mikhaellopez.circularimageview.CircularImageView
@@ -206,7 +207,7 @@
     <StackView
         android:id="@+id/shadesStackView"
         android:layout_width="280dp"
-        android:layout_height="180dp"
+        android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
