--- a/app/src/main/res/drawable/rectangle_shape_outline.xml
+++ b/app/src/main/res/drawable/rectangle_shape_outline.xml
@@ -13,7 +13,7 @@
         <shape android:shape="rectangle">
             <!--<solid android:color="#1d96ba" />-->
             <corners android:radius="0dp" />
-            <stroke android:width="4dp" android:color="#11616161" />
+            <stroke android:width="4dp" android:color="@color/grey_11" />
             <!-- Set the same value for both width and height to get a circular shape -->
             <size android:width="100dp" android:height="100dp" />
         </shape>
