--- a/app/src/main/res/layout/custom_title_view.xml
+++ b/app/src/main/res/layout/custom_title_view.xml
@@ -22,4 +22,26 @@
         android:textStyle="bold"
         android:visibility="visible" />
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/colorValueDialogTVCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|top">
+
+        <TextView
+            android:id="@+id/colorValueDialogTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="4dp"
+            android:gravity="center"
+            android:padding="4dp"
+            android:text="COLOR VALUE"
+            android:textColor="@color/grey_9"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
