--- a/app/src/main/res/layout/shades_layout.xml
+++ b/app/src/main/res/layout/shades_layout.xml
@@ -1,116 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="250dp"
+    android:layout_margin="8dp"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/imageShadeView4Card"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="120dp"
+        android:layout_gravity="center_vertical|center"
+        android:layout_marginEnd="75dp"
+        android:layout_marginTop="@dimen/margin8dp"
+        android:background="@drawable/rectangle_shape_outline"
+        app:layout_constraintBottom_toBottomOf="@+id/imageShadeViewCard"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@+id/imageShadeViewCard"
+        app:layout_constraintTop_toTopOf="@+id/imageShadeViewCard">
 
+        <ImageView
+            android:id="@+id/imageShadeView4"
+            android:layout_width="@dimen/margin_100dp"
+            android:layout_height="@dimen/margin_100dp"
+            android:layout_marginBottom="@dimen/margin_2dp"
+            android:elevation="18dp"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/stackShadesErrorTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:padding="2dp"
+            android:text="Error"
+            android:textColor="@color/grey_9"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.301"
+            app:layout_constraintLeft_toLeftOf="@+id/imageShadeView4"
+            app:layout_constraintRight_toRightOf="@+id/imageShadeView4"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.462" />
 
     </android.support.v7.widget.CardView>
 
-    <ImageView
-        android:id="@+id/imageShadeView"
-        android:layout_width="160dp"
+    <FrameLayout
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="@dimen/margin8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="150dp"
+            android:layout_height="170dp"
+            android:layout_gravity="center"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <RelativeLayout
+                android:id="@+id/imageShadeViewCard"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rectangle_shape_outline">
+
+                <TextView
+                    android:id="@+id/stackShadesErrorMainTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/rectangle_shape_outline"
+                    android:padding="4dp"
+                    android:scaleType="fitCenter"
+                    android:text="B"
+                    android:textColor="@color/grey_9"
+                    android:textSize="36sp"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="100dp"
+            android:layout_height="190dp"
+            android:layout_gravity="center"
+            android:elevation="18dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:elevation="18dp">
+
+                <ImageView
+                    android:id="@+id/imageShadeView"
+                    android:layout_width="100dp"
+                    android:layout_height="165dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/rectangle_shape_outline"
+                    android:padding="4dp"
+                    android:scaleType="fitCenter"
+                    android:visibility="visible" />
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </FrameLayout>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/imageShadeView2Card"
+        android:layout_width="wrap_content"
         android:layout_height="160dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_gravity="center_horizontal|center"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="25dp"
         android:background="@drawable/rectangle_shape_outline"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/imageShadeViewCard"
+        app:layout_constraintLeft_toLeftOf="@+id/imageShadeViewCard"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        app:layout_constraintTop_toTopOf="@+id/imageShadeViewCard">
 
-    <ImageView
-        android:id="@+id/imageShadeView2"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rectangle_shape_outline"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageShadeView"
-        app:layout_constraintHorizontal_bias="0.833"
-        app:layout_constraintLeft_toLeftOf="@+id/imageShadeView"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageShadeView" />
+        <TextView
+            android:id="@+id/stackShadesError2TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:padding="2dp"
+            android:text="A"
+            android:textColor="@color/grey_9"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/stackShadesError2TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:padding="2dp"
-        android:text="Error"
-        android:textColor="@color/grey_9"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.774"
-        app:layout_constraintLeft_toLeftOf="@+id/imageShadeView2"
-        app:layout_constraintRight_toRightOf="@+id/imageShadeView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.462" />
+        <ImageView
+            android:id="@+id/imageShadeView2"
+            android:layout_width="120dp"
+            android:layout_height="140dp"
+            android:layout_marginBottom="@dimen/margin_2dp"
+            android:elevation="18dp"
+            android:visibility="visible" />
 
-    <ImageView
-        android:id="@+id/imageShadeView4"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rectangle_shape_outline"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageShadeView"
-        app:layout_constraintHorizontal_bias="0.163"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/imageShadeView"
-        app:layout_constraintTop_toTopOf="@+id/imageShadeView" />
+    </android.support.v7.widget.CardView>
 
-    <TextView
-        android:id="@+id/stackShadesErrorTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:padding="2dp"
-        android:text="Error"
-        android:textColor="@color/grey_9"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.301"
-        app:layout_constraintLeft_toLeftOf="@+id/imageShadeView4"
-        app:layout_constraintRight_toRightOf="@+id/imageShadeView4"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.462" />
-
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
