--- a/app/src/main/res/layout/shades_layout_row.xml
+++ b/app/src/main/res/layout/shades_layout_row.xml
@@ -25,7 +25,7 @@
         app:layout_constraintVertical_bias="0.498" />
 
     <RelativeLayout
-        android:id="@+id/relativeLayout"
+        android:id="@+id/dialogColorContainerRelativeLayout"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
