--- a/app/src/main/res/layout/shades_layout_stack_view.xml
+++ b/app/src/main/res/layout/shades_layout_stack_view.xml
@@ -35,26 +35,24 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:gravity="start">
 
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/imageButtonMain"
                 android:layout_width="@dimen/width20dp"
                 android:layout_height="@dimen/height20dp"
-                android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
                 android:background="@drawable/circle_shape_filled" />
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="8dp"
                 android:layout_toEndOf="@+id/imageButtonMain"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:text="color value"
                 android:textColor="@color/blue5"
                 android:visibility="visible" />
@@ -66,19 +64,20 @@
                 android:layout_alignTop="@+id/imageButtonMain"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="4dp"
-                android:layout_marginLeft="4dp"
+                android:layout_marginLeft="14dp"
                 android:layout_marginRight="4dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="14dp"
                 android:layout_toEndOf="@+id/textView"
                 android:background="@drawable/circle_shape_filled" />
 
             <TextView
                 android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="8dp"
                 android:layout_toEndOf="@+id/imageButton1"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:text="color value"
                 android:textColor="@color/blue5"
                 android:visibility="visible" />
@@ -88,8 +87,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:gravity="center_horizontal|start">
 
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/imageButton2"
@@ -97,18 +95,17 @@
                 android:layout_height="@dimen/width20dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
                 android:background="@drawable/circle_shape_filled" />
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="8dp"
                 android:layout_toEndOf="@+id/imageButton2"
-                android:gravity="center"
-
+                android:gravity="center|start"
                 android:text="color value"
                 android:textColor="@color/blue5"
                 android:visibility="visible" />
@@ -118,19 +115,21 @@
                 android:layout_width="@dimen/width20dp"
                 android:layout_height="@dimen/width20dp"
                 android:layout_alignTop="@+id/imageButton2"
-                android:layout_marginLeft="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginLeft="14dp"
                 android:layout_marginRight="4dp"
+                android:layout_marginStart="14dp"
                 android:layout_toEndOf="@+id/textView2"
                 android:background="@drawable/circle_shape_filled" />
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_alignTop="@+id/textView2"
-
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="8dp"
                 android:layout_toEndOf="@+id/imageButton3"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:text="color value"
                 android:textColor="@color/blue5"
                 android:visibility="visible" />
@@ -140,50 +139,47 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:gravity="center_horizontal|start">
 
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/imageButton4"
                 android:layout_width="@dimen/width20dp"
                 android:layout_height="@dimen/width20dp"
                 android:layout_alignParentStart="true"
-                android:layout_alignTop="@+id/textView4"
-                android:layout_marginLeft="4dp"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="4dp"
                 android:background="@drawable/circle_shape_filled" />
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-
-                android:layout_alignBottom="@+id/imageButton5"
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="8dp"
                 android:layout_toEndOf="@+id/imageButton4"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:text="color value"
-                android:textColor="@color/blue5"
-                android:visibility="visible" />
+                android:textColor="@color/blue5" />
 
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/imageButton5"
                 android:layout_width="@dimen/width20dp"
                 android:layout_height="@dimen/width20dp"
+                android:layout_alignTop="@+id/imageButton4"
                 android:layout_marginEnd="4dp"
-                android:layout_marginLeft="4dp"
+                android:layout_marginLeft="14dp"
                 android:layout_marginRight="4dp"
-                android:layout_marginStart="8dp"
-                android:layout_toRightOf="@+id/textView4"
+                android:layout_marginStart="14dp"
+                android:layout_toEndOf="@+id/textView4"
                 android:background="@drawable/circle_shape_filled" />
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_alignBottom="@+id/imageButton5"
-                android:layout_alignTop="@+id/imageButton5"
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8dp"
                 android:layout_toEndOf="@+id/imageButton5"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:text="color value"
                 android:textColor="@color/blue5"
                 android:visibility="visible" />
@@ -200,6 +196,7 @@
         android:gravity="center|center_horizontal"
         android:text="COLOR SHADES"
         android:textColor="@color/blue5"
+        android:textSize="14sp"
         android:textStyle="bold"
         android:visibility="visible" />
 
@@ -208,12 +205,12 @@
         android:layout_width="280dp"
         android:layout_height="180dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="4dp"
         android:animateLayoutChanges="true"
         android:clipChildren="false"
         android:clipToPadding="false"
