--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="width20dp">20dp</dimen>
     <dimen name="height20dp">20dp</dimen>
     <dimen name="margin8dp">8dp</dimen>
+    <dimen name="margin_4dp">4dp</dimen>
+    <dimen name="margin_100dp">100dp</dimen>
+    <dimen name="margin_150dp">150dp</dimen>
+    <dimen name="margin_2dp">2dp</dimen>
 </resources>
