--- a/app/src/main/res/layout/shades_layout_row.xml
+++ b/app/src/main/res/layout/shades_layout_row.xml
@@ -15,7 +15,6 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:background="@drawable/rectangle_shape_outline"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -31,23 +30,24 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/stackShadeView"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/stackShadeView"
         app:layout_constraintRight_toRightOf="@+id/stackShadeView"
-        app:layout_constraintTop_toTopOf="@+id/stackShadeView">
+        app:layout_constraintTop_toTopOf="@+id/stackShadeView"
+        app:layout_constraintVertical_bias="1.0">
 
         <TextView
             android:id="@+id/stackShadeTextView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="#11f2f2f2"
-            android:padding="8dp"
+            android:padding="4dp"
             android:text="Color Value"
             android:textColor="@color/grey_11"
             android:textStyle="bold"
@@ -58,18 +58,15 @@
             android:id="@+id/stackShadeValueTextView"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
-            android:layout_alignEnd="@+id/stackShadeTextView"
-            android:layout_alignParentStart="true"
             android:layout_below="@+id/stackShadeTextView"
-            android:layout_marginBottom="4dp"
+            android:layout_centerHorizontal="true"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
             android:gravity="center_horizontal|top"
             android:padding="4dp"
             android:text="Color Value"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             android:visibility="visible" />
 
