Changes To Last Commit

--- a/app/src/main/res/layout/shades_layout_stack_view.xml
+++ b/app/src/main/res/layout/shades_layout_stack_view.xml
@@ -6,26 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/dialogRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:padding="4dp"
-        android:scrollbars="vertical"
-        android:visibility="gone"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintBottom_toTopOf="@+id/shadesStackView"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -188,6 +168,13 @@
 
     </LinearLayout>
 
+    <include
+        layout="@layout/card_stack_view_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
+        android:visibility="visible" />
+
     <TextView
         android:id="@+id/shadesHeader"
         android:layout_width="match_parent"
@@ -200,25 +187,20 @@
         android:textStyle="bold"
         android:visibility="visible" />
 
-    <StackView
-        android:id="@+id/shadesStackView"
-        android:layout_width="280dp"
-        android:layout_height="180dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:animateLayoutChanges="true"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.683" />
+    <!--<StackView-->
+    <!--android:id="@+id/shadesStackView"-->
+    <!--android:layout_width="280dp"-->
+    <!--android:layout_height="180dp"-->
+    <!--android:layout_gravity="center_horizontal"-->
+    <!--android:layout_marginBottom="4dp"-->
+    <!--android:layout_marginEnd="8dp"-->
+    <!--android:layout_marginLeft="8dp"-->
+    <!--android:layout_marginRight="8dp"-->
+    <!--android:layout_marginStart="8dp"-->
+    <!--android:layout_marginTop="4dp"-->
+    <!--android:animateLayoutChanges="true"-->
+    <!--android:background="@color/grey_11"-->
+    <!--android:clipChildren="false"-->
+    <!--android:clipToPadding="false" />-->
 
 </LinearLayout>
