--- a/app/src/main/res/layout/card_stack_view_layout.xml
+++ b/app/src/main/res/layout/card_stack_view_layout.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <com.yuyakaido.android.cardstackview.CardStackView
+        android:id="@+id/shadesStackView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:paddingTop="4dp"
+        app:elevationEnabled="true"
+        app:leftOverlay="@layout/hearts_view_right_top"
+        app:rightOverlay="@layout/hearts_view_left_top"
+        app:scaleDiff="0.1"
+        app:stackFrom="top"
+        app:swipeDirection="horizontal"
+        app:swipeThreshold="0.85"
+        app:translationDiff="14"
+        app:visibleCount="4" />
 
 </LinearLayout>
