--- a/app/src/main/res/layout/hearts_view_left_top.xml
+++ b/app/src/main/res/layout/hearts_view_left_top.xml
@@ -3,13 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="left|top"
+    android:layout_marginLeft="14dp"
+    android:layout_marginTop="14dp"
     android:orientation="vertical">
 
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_below="@+id/imageView"
-        android:layout_margin="8dp"
         android:gravity="center"
         android:padding="4dp"
         android:src="@drawable/heart_blocks"
