--- a/app/src/main/res/layout/hearts_view_right_top.xml
+++ b/app/src/main/res/layout/hearts_view_right_top.xml
@@ -3,6 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="right|top"
+    android:layout_marginRight="6dp"
+    android:layout_marginTop="6dp"
     android:orientation="vertical">
 
     <ImageView
