--- a/app/src/main/res/layout/shades_layout.xml
+++ b/app/src/main/res/layout/shades_layout.xml
@@ -3,29 +3,86 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="280dp"
     android:layout_margin="8dp"
-    android:orientation="vertical">
+    android:layout_marginBottom="12dp"
+    android:orientation="vertical"
+    android:padding="8dp">
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/imageShadeMainCard"
+        android:layout_width="150dp"
+        android:layout_height="190dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="@dimen/margin8dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|top">
+
+            <ImageView
+                android:id="@+id/imageShadeView"
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/cross_shaped_pattern"
+                android:visibility="visible" />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/imageShadeView2Card"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:layout_gravity="center_horizontal|end|center"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="@dimen/margin8dp"
+        android:background="@drawable/rectangle_shape_outline">
+
+        <TextView
+            android:id="@+id/stackShadesError2TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:padding="2dp"
+            android:text=""
+            android:textColor="@color/grey_9"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/imageShadeView2"
+            android:layout_width="120dp"
+            android:layout_height="130dp"
+            android:layout_marginBottom="@dimen/margin_2dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/cross_shaped_pattern"
+            android:visibility="visible" />
+
+    </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
         android:id="@+id/imageShadeView4Card"
         android:layout_width="wrap_content"
         android:layout_height="150dp"
-        android:layout_gravity="center_vertical|center|start"
+        android:layout_gravity="center_horizontal|start|center"
         android:layout_marginStart="10dp"
         android:layout_marginTop="@dimen/margin8dp"
-        android:background="@drawable/rectangle_shape_outline"
-        app:layout_constraintBottom_toBottomOf="@+id/imageShadeViewCard"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/imageShadeViewCard"
-        app:layout_constraintTop_toTopOf="@+id/imageShadeViewCard">
+        android:background="@drawable/rectangle_shape_outline">
 
         <ImageView
             android:id="@+id/imageShadeView4"
-            android:layout_width="@dimen/margin_100dp"
+            android:layout_width="120dp"
             android:layout_height="130dp"
             android:layout_marginBottom="@dimen/margin_2dp"
-            android:elevation="18dp"
             android:scaleType="centerCrop"
             android:src="@drawable/cross_shaped_pattern"
             android:visibility="visible" />
@@ -52,122 +109,6 @@
             app:layout_constraintRight_toRightOf="@+id/imageShadeView4"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.462" />
-
-    </android.support.v7.widget.CardView>
-
-    <FrameLayout
-        android:layout_width="150dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="@dimen/margin8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="118dp"
-            android:layout_height="170dp"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <RelativeLayout
-                android:id="@+id/imageShadeViewCard"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/cross_shaped_pattern">
-
-                <TextView
-                    android:id="@+id/stackShadesErrorMainTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/rectangle_shape_outline"
-                    android:padding="4dp"
-                    android:scaleType="fitCenter"
-                    android:text=""
-                    android:textColor="@color/grey_9"
-                    android:textSize="36sp"
-                    android:textStyle="bold"
-                    android:visibility="gone"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </RelativeLayout>
-
-        </android.support.v7.widget.CardView>
-
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/imageShadeMainCard"
-            android:layout_width="110dp"
-            android:layout_height="190dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="10dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|top"
-                android:elevation="18dp">
-
-                <ImageView
-                    android:id="@+id/imageShadeView"
-                    android:layout_width="120dp"
-                    android:layout_height="170dp"
-                    android:elevation="18dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/cross_shaped_pattern"
-                    android:visibility="visible" />
-
-            </RelativeLayout>
-
-        </android.support.v7.widget.CardView>
-
-    </FrameLayout>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/imageShadeView2Card"
-        android:layout_width="wrap_content"
-        android:layout_height="170dp"
-        android:layout_gravity="center_horizontal|end|center"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/rectangle_shape_outline">
-
-        <TextView
-            android:id="@+id/stackShadesError2TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:padding="2dp"
-            android:text=""
-            android:textColor="@color/grey_9"
-            android:textSize="36sp"
-            android:textStyle="bold"
-            android:visibility="visible" />
-
-        <ImageView
-            android:id="@+id/imageShadeView2"
-            android:layout_width="120dp"
-            android:layout_height="150dp"
-            android:layout_marginBottom="@dimen/margin_2dp"
-            android:elevation="18dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/cross_shaped_pattern"
-            android:visibility="visible" />
 
     </android.support.v7.widget.CardView>
 
