--- a/app/src/main/res/layout/shades_layout_row.xml
+++ b/app/src/main/res/layout/shades_layout_row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,68 +8,107 @@
 
     <ImageView
         android:id="@+id/stackShadeView"
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        android:layout_marginTop="12dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/cross_shaped_pattern"
+        android:visibility="visible" />
 
-    <RelativeLayout
-        android:id="@+id/dialogColorContainerRelativeLayout"
-        android:layout_width="140dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/stackShadeView"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/stackShadeView"
-        app:layout_constraintRight_toRightOf="@+id/stackShadeView"
-        app:layout_constraintTop_toTopOf="@+id/stackShadeView"
-        app:layout_constraintVertical_bias="1.0">
+        android:layout_gravity="left|top"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="14dp"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/stackShadeTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_below="@+id/imageView"
+            android:alpha="0.4"
+            android:gravity="center"
             android:padding="4dp"
-            android:text="Color Value"
-            android:textColor="@color/grey_11"
-            android:textStyle="bold"
-            android:visibility="visible"
-            app:layout_constraintVertical_bias="0.324" />
-
-        <TextView
-            android:id="@+id/stackShadeValueTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_below="@+id/stackShadeTextView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:gravity="center_horizontal|top"
-            android:padding="4dp"
-            android:text="Color Value"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            android:textStyle="bold"
+            android:src="@drawable/heart_blocks"
+            android:text="COLOR VALUE"
             android:visibility="visible" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/stackShadeTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:padding="4dp"
+                android:text="Color Value"
+                android:textColor="@color/grey_11"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:visibility="visible"
+                app:layout_constraintVertical_bias="0.324" />
+
+            <TextView
+                android:id="@+id/stackShadeValueTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:gravity="center_horizontal|top"
+                android:padding="4dp"
+                android:text="Color Value"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:visibility="visible" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|top"
+        android:layout_marginRight="14dp"
+        android:layout_marginTop="14dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_below="@+id/imageView"
+            android:alpha="0.4"
+            android:gravity="center"
+            android:padding="4dp"
+            android:src="@drawable/heart_blocks"
+            android:text="COLOR VALUE"
+            android:visibility="visible" />
+
+    </LinearLayout>
+
+
+</FrameLayout>
